Fixed the yaml for resource quota

--- a/Labguide/02.adoc
+++ b/Labguide/02.adoc
@@ -54,3 +54,11 @@ curl localhost:8080
 -------------------
 
 . Stop the port-forward by pressing `CTRL-C`
+
+. Delete the created object
+
++
+[source,java]
+-------------------
+kubectl delete po pages
+-------------------
