--- a/Labguide/Overview.adoc
+++ b/Labguide/Overview.adoc
@@ -26,8 +26,7 @@ When the instructor kicks off a particular lab, you can use the below links to n
 . link:https://cloud-native-labs.s3.ap-south-1.amazonaws.com/brainy/05.html#["Pod Design", window="_blank"]
 . link:https://cloud-native-labs.s3.ap-south-1.amazonaws.com/brainy/06.html#["Configmaps & Secrets", window="_blank"]
 . link:https://cloud-native-labs.s3.ap-south-1.amazonaws.com/brainy/07.html#["Jobs & CronJobs", window="_blank"]
-. link:https://cloud-native-labs.s3.ap-south-1.amazonaws.com/brainy/08.html#["Resource Quotas", window="_blank"]
-. Design your deployment
+. link:https://cloud-native-labs.s3.ap-south-1.amazonaws.com/brainy/08.html#["Resource Quotas", window="_blank"]. Design your deployment
 .. link:https://cloud-native-labs.s3.ap-south-1.amazonaws.com/brainy/08.1-Assignment.html#["Category Microservice", window="_blank"]
 .. link:https://cloud-native-labs.s3.ap-south-1.amazonaws.com/brainy/08.2-Assignment.html#["Pages Microservice", window="_blank"]
 . link:https://cloud-native-labs.s3.ap-south-1.amazonaws.com/brainy/09.html#["Helmify", window="_blank"]
