--- a/Labguide/10.adoc
+++ b/Labguide/10.adoc
@@ -429,7 +429,7 @@ spec:
 ------------------
 kubectl get  ns
 kubectl config get-contexts
-kubectl config set-context --current --namespace [name-of-your-team]-dev
+kubectl config set-context --current --namespace [name-of-your-team]
 ------------------
 
 . Install the pages application umbrella chart
@@ -438,7 +438,7 @@ kubectl config set-context --current --namespace [name-of-your-team]-dev
 ------------------
 helm template pages
 helm install pagesapp pages --dry-run --debug
-helm install pagesapp pages -n [name-of-your-team]-dev
+helm install pagesapp pages -n [name-of-your-team]
 ------------------
 
 . Verify the installation and deployment
