--- a/Labguide/08.2-Assignment.adoc
+++ b/Labguide/08.2-Assignment.adoc
@@ -82,15 +82,49 @@ kubectl apply -f ~/workspace/kubernetes-manifests/pages/deployment.yaml
 --------
 
 . We successfully deployed `pages` microservice application to K8s cluster.
-But, does it work as expected? Test it using basic curl commands or `postman`
-
+Test it using basic curl commands or `postman`
 
 +
 . Refer <<07-Pages-Curl-Commands.adoc#pages-curl-section, Curl Guide>> for curl testing guide
 
+=== Kubernetes ressources cleanup
+. Delete all the resources before heading towards the next modules
+. First you need to delete the deployments, services and their configuration settings
+  Next you will have to delete the pvc. Once pvc is deleted, you can delete the pv
+. Finally delete the namespace
 
-. Does GET request work?
-. Does POST request work?
-. Were you able to find any defects in this version of the deployment? Note down any problems that you might encounter and discuss them with your pairs to find suitable solutions
++
+[source,shell script]
+--------
+kubectl get deploy
+kubectl get jobs
+kubectl delete -f ~/workspace/kubernetes-manifests/mysql/deployment.yaml
+kubectl delete -f ~/workspace/kubernetes-manifests/mysql/flyway-job.yaml
+kubectl delete -f ~/workspace/kubernetes-manifests/pages/deployment.yaml
+--------
 
++
+[source,shell script]
+--------
+kubectl delete -f ~/workspace/kubernetes-manifests/mysql/service.yaml
+kubectl delete -f ~/workspace/kubernetes-manifests/pages/service.yaml
+kubectl delete -f ~/workspace/kubernetes-manifests/mysql/configmap.yaml
+kubectl delete -f ~/workspace/kubernetes-manifests/mysql/secret.yaml
+kubectl delete -f ~/workspace/kubernetes-manifests/pages/config.yaml
+--------
 
++
+[source,shell script]
+--------
+kubectl get pvc
+kubectl get pv
+kubectl apply -f ~/workspace/kubernetes-manifests/mysql/pvc.yaml
+kubectl apply -f ~/workspace/kubernetes-manifests/mysql/pv.yaml
+kubectl get pvc
+kubectl get pv
+--------
++
+[source,shell script]
+--------
+kubectl delete ns `[student-name]`
+--------
