--- a/Labguide/11.adoc
+++ b/Labguide/11.adoc
@@ -500,7 +500,7 @@ spec:
 ------------------
 kubectl get  ns
 kubectl config get-contexts
-kubectl config set-context --current --namespace [name-of-your-team]-dev
+kubectl config set-context --current --namespace [name-of-your-team]
 ------------------
 
 . Uninstall the previous app as we cannot upgrade
@@ -512,7 +512,7 @@ kubectl config set-context --current --namespace [name-of-your-team]-dev
 helm template pages
 helm uninstall pagesapp
 helm install pagesapp pages --dry-run --debug
-helm install pagesapp pages -n [name-of-your-team]-dev
+helm install pagesapp pages -n [name-of-your-team]
 ------------------
 
 . Verify the installation and deployment
