--- a/Labguide/08.2-Assignment.adoc
+++ b/Labguide/08.2-Assignment.adoc
@@ -81,10 +81,15 @@ kubectl apply -f ~/workspace/kubernetes-manifests/mysql/flyway-job.yaml
 kubectl apply -f ~/workspace/kubernetes-manifests/pages/deployment.yaml
 --------
 
-. We successfully deployed `pages` microservice application to K8s cluster.
-Test it using basic curl commands or `postman`
 
+.   Access the category application
 +
+[source, shell script]
+-------------------
+kubectl port-forward svc/category 8080:8080
+-------------------
+
+
 . Refer <<07-Pages-Curl-Commands.adoc#pages-curl-section, Curl Guide>> for curl testing guide
 
 === Cleanup
