--- a/Labguide/13.adoc
+++ b/Labguide/13.adoc
@@ -158,9 +158,9 @@ kubectl get svc pagesapp-api
 +
 [source, shell script]
 ------------------
-SVC=$(kubectl get svc -l access=external --namespace {{ .Release.Namespace }} -l access=external | awk 'NR==2{print $1}')
+SVC=$(kubectl get svc -l access=external | awk 'NR==2{print $1}')
 
-kubectl --namespace {{ .Release.Namespace }} port-forward svc/$SVC 8080:8080
+kubectl port-forward svc/$SVC 8080:8080
 ------------------
 
 . Test the pages application by performing CRUD operations using curl/postman.
