--- a/Labguide/15.adoc
+++ b/Labguide/15.adoc
@@ -233,13 +233,16 @@ git push -u origin master
 -------------
 
 
+. Before testing, point the kubectl context to the right cluster and namespace
+
 . Port forward to connect to pages service running inside K8s from the local machine
 +
 [source, shell script]
 ------------------
-SVC=$(kubectl get svc -l access=external --namespace {{ .Release.Namespace }} -l access=external | awk 'NR==2{print $1}')
 
-kubectl --namespace {{ .Release.Namespace }} port-forward svc/$SVC 8080:8080
+SVC=$(kubectl get svc -l access=external | awk 'NR==2{print $1}')
+
+kubectl port-forward svc/$SVC 8080:8080
 ------------------
 
 . Test the pages application by performing CRUD operations using curl/postman.
